# trek

./: 404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape  index.html  mkdocs.yml  prek.toml  rust_out  sitemap.xml
.claude/: MEMORY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
contributing/: index.html
docs/: comparison.md  index.md
docs/contributing/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: command-palette.md  keybindings.md
docs/usage/: archives.md  file-operations.md  git.md  navigation.md  preview.md  search.md  watch-mode.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
memory/: feedback_version_bumping.md
reference/command-palette/: index.html
reference/keybindings/: index.html
search/: search_index.json
src/: app.rs  archive.rs  args.rs  bookmarks.rs  datetime.rs  events.rs  find.rs  git.rs  highlight.rs  icons.rs  main.rs  ops.rs  rename.rs  search.rs  session.rs  shell.rs  theme.rs  trash.rs  ui.rs  watcher.rs
src/app/: archive_nav.rs  bookmarks.rs  change_feed.rs  change_feed_ops.rs  cmux.rs  content.rs  context_bundle.rs  file_ops.rs  filter.rs  find.rs  frecency.rs  gitignore.rs  layout.rs  metadata.rs  mod.rs  mouse.rs  nav_state.rs  navigation.rs  opener.rs  overlay_state.rs  palette.rs  palette_ops.rs  preview.rs  preview_state.rs  quick_rename.rs  rename.rs  search.rs  selection.rs  session_snapshot.rs  session_summary.rs  sort.rs  (+4 more)
(+7 files in other folders)
