[package]
name = "trek"
version = "0.27.0"
edition = "2021"
rust-version = "1.80"
description = "A terminal file manager with mouse-resizable panes"
license = "MIT"
homepage = "https://github.com/bradleyfay/trek"
repository = "https://github.com/bradleyfay/trek"

[dependencies]
crossterm = { version = "0.27" }
ratatui = "0.26"
anyhow = "1"
base64 = "0.22"
regex = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
